--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,6 @@
 body {
-    background: #000;
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(9,3,29,1) 53%, rgba(0,0,0,1) 100%);
     color: #999;
     font-family: sans-serif, Segoe UI,Arial,Tahoma;
     font-size: 18px;
